# passwd-manager

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: crypto.rs  error.rs  main.rs  repl.rs  vault.rs
tests/: cli.rs
